--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 /* -------------------- IMPORTED FONTS -------------------------------------- */
 
-@import url('https://fonts.google.com/share?selection.family=Bebas%20Neue%7CMontserrat:ital,wght@0,400;0,700;1,400');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:ital,wght@0,400;0,700;1,400&display=swap');
 
 /*-------------------- CSS RESET ---------------------------------------------------*/
 
@@ -20,8 +20,8 @@
     --mossgreen: #7ABFBF;
     --lightgreen: rgba(122, 191, 191, .5);
     --orange: #EB5428;
-    --font-primary: 'Bebas Neue', sans-serif;
-    --font-secondary: 'Kavoon', sans-serif;
+    --font-primary: 'Bebas Neue', Arial, sans-serif;
+    --font-secondary: 'Montserrat', Arial, sans-serif;
 }
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
