--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,17 @@
     margin: 0;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+}
+
 /* -------------------- ROOT VARIABLES --------------------------------------- */
 
 :root {
@@ -20,11 +31,13 @@
     --mossgreen: #7ABFBF;
     --lightgreen: rgba(122, 191, 191, .5);
     --orange: #EB5428;
-    --font-primary: 'Bebas Neue', Arial, sans-serif;
-    --font-secondary: 'Montserrat', Arial, sans-serif;
+    --font-primary: 'Bebas Neue', sans-serif;
+    --font-secondary: 'Montserrat', sans-serif;
 }
 
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
+
+/* Styles from powerpoint*/
 
 html {
     font-family: var(--font-primary);
@@ -33,10 +46,12 @@ html {
 
 h1 {
     font-size: 40px;
+    text-align: center;
 }
 
 h2 {
     font-size: 30px;
+    text-align: center;
 }
 
 h3 {
@@ -58,6 +73,44 @@ dt {
     font-family: var(--font-secondary);
     font-weight: 700;
     font-size: 16px;
+}
+
+/* Additional rules */
+
+main {
+    display: block;
+    background-color: var(--lightgrey);
+    width: 80%;
+}
+
+p {
+    padding: 0;
+}
+
+dl {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    gap: 10px;
+}
+aside {
+    background-color: var(--mossgreen);
+    padding: 10px;
+}
+
+aside > article {
+    padding: 10px;
+}
+
+.star-rating {
+    font-weight: bold;
+}
+
+article h3 {
+    padding: 10px;
+}
+
+#ingredients ul, ol {
+    margin-left: 20px;
 }
 
 /*-------------------- MEDIA QUERY (medium) --------------------------------*/
