--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,6 @@ a {
 img {
     max-width: 100%;
     height: auto;
-    display: block;
 }
 
 /* -------------------- ROOT VARIABLES --------------------------------------- */
@@ -38,7 +37,6 @@ img {
 /* --------------------GLOBAL STYLES (mobile first/small) --------------------*/
 
 /* Styles from powerpoint*/
-
 html {
     font-family: var(--font-primary);
     background-color: var(--lightgreen);
@@ -59,14 +57,22 @@ h3 {
     font-size: 25px;
 }
 
-nav a, nav span, menu li, #social li, footer {
+nav a,
+nav span,
+menu li,
+#social li,
+footer {
     font-family: var(--font-primary);
     font-weight: 400;
     font-size: 20px;
     list-style: none;
 }
 
-p, dd, li, nav, input {
+p,
+dd,
+li,
+nav,
+input {
     font-family: var(--font-secondary);
     font-weight: 400;
     font-size: 16px;
@@ -79,14 +85,17 @@ dt {
 }
 
 /* Additional rules */
+.visually-hidden {
+    display: none;
+}
 
 body {
     width: 80%;
     margin: 0 auto;
 }
 
-main, header {
-    display: block;
+main,
+header {
     background-color: var(--lightgrey);
 }
 
@@ -117,17 +126,19 @@ menu a {
     gap: 5px;
     padding: 10px;
 }
+
+section {
+    padding-top: 10px;
+}
+
+/* Aside section rules*/
 aside {
     background-color: var(--mossgreen);
     padding: 10px;
     max-width: 100%;
 }
 
-section {
-    padding: 10px 0;
-}
-
-#side-dishes h2{
+#side-dishes h2 {
     padding-bottom: 30px;
 }
 
@@ -147,7 +158,7 @@ section {
     gap: 0.5em;
 }
 
-.star-rating dt{
+.star-rating dt {
     font-weight: bold;
 }
 
@@ -159,15 +170,14 @@ section {
     display: flex;
     gap: 0.5em;
 }
+
 .filled-star {
     fill: var(--orange)
 }
 
-article h3 {
-    padding: 10px;
-}
-
-#ingredients ul, ol {
+/*Ingredients Section Rules*/
+#ingredients ul,
+ol {
     margin-left: 25px;
 }
 
@@ -179,10 +189,12 @@ article h3 {
     list-style: square;
 }
 
+/*Directions Section Rules*/
 #directions li {
     padding: 0.5em;
 }
 
+/*Navigation Rules*/
 nav {
     display: flex;
     flex-direction: row;
@@ -198,6 +210,7 @@ nav li {
     list-style: none;
 }
 
+/*Main Navigation Rules*/
 #main-nav h2 {
     display: none;
 }
@@ -212,10 +225,11 @@ nav li {
     grid-template-rows: auto;
     align-items: center;
     z-index: 1;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
 }
 
 #main-nav ul {
-    display: grid; 
+    display: grid;
     grid-template-columns: auto 1fr auto;
     justify-content: center;
 }
@@ -244,14 +258,11 @@ nav li {
     stroke: var(--orange);
 }
 
-#main-nav img {
-    height: 30px;
-}
-
 .extended-main-nav {
     display: none;
 }
 
+/*Search bar Rules*/
 #search-bar {
     display: grid;
     grid-template-columns: 1fr;
@@ -274,8 +285,9 @@ nav li {
     padding: 5px;
 }
 
-.visually-hidden {
-    display: none;
+/*Footer Rules*/
+footer {
+    background-color: white;
 }
 
 #social-media {
@@ -286,14 +298,9 @@ nav li {
     padding-top: 30px;
 }
 
-footer {
-
-    background-color: white;
-}
-
 #copyright {
     display: grid;
-    grid-template-rows: 1fr;    
+    grid-template-rows: 1fr;
     grid-template-columns: auto;
     text-align: center;
 }
@@ -306,10 +313,271 @@ footer {
     padding-bottom: 1em;
 }
 
-
-
 /*-------------------- MEDIA QUERY (medium) --------------------------------*/
 
+@media screen and (min-width: 768px) {
+
+    h1 {
+        text-align: left;
+        padding-bottom: 15px;
+    }
+
+    #main-menu {
+        position: relative;
+        z-index: 1;
+        background-color: rgba(255, 255, 255, .8);
+        padding-top:15px;
+    }
+
+    header img {
+        position: relative;
+        bottom: 88px;
+        z-index: 0;
+    }
+
+    /*Main Rules*/
+
+    #main-grid {
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+    }
+
+    #details dl {
+        text-align: left;
+        grid-template-columns: 1fr 1fr;
+        justify-content: center;
+    }
+
+    #details dt {
+        text-align: right;
+    }
+
+    /*small
+    #details dl {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 5px;
+        padding: 10px;
+    }
+*/
+
+    /*Main Nav Rules*/
+    #home {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    #avatar {
+        grid-column: 7;
+        grid-row: 1;
+    }
+
+    #up-text {
+        display: none;
+    }
+
+    #main-nav .menu-toggle {
+        display: none;
+    }
+
+    #main-nav {
+        width: 80%;
+    }
+
+    #main-nav a {
+        padding: 0px;
+    }
+
+    #main-nav ul {
+        grid-template-columns: repeat(7, 1fr);
+        background-color: white;
+    }
+
+    .extended-main-nav img{
+        width: 50%;
+    }
+
+    .extended-main-nav {
+        display: grid;
+        background-color: white;
+        grid-row: 2;
+        color: var(--orange);
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+    #search-bar {
+        display: grid;
+        grid-template-columns: 1fr auto;
+        position: fixed;
+        top: 10px;
+        left: 65%;
+        width: 30%;
+        grid-column: 2;
+        grid-row: 1;
+        z-index: 2;
+    }
+
+/*small rules
+
+    #search-bar {
+        display: grid;
+        grid-template-columns: 1fr;
+        position: absolute;
+        top: 120px;
+        left: 50%;
+        width: 60%;
+        transform: translateX(-50%);
+        border: 2px solid var(--orange);
+    }
+
+    #search {
+        grid-column: 1;
+    }
+
+    #search-bar svg {
+        stroke: white;
+        grid-column: 2;
+        background-color: var(--orange);
+        padding: 5px;
+    }*/
+
+    /*small rules
+    #search-bar {
+        display: grid;
+        grid-template-columns: 1fr;
+        position: absolute;
+        top: 120px;
+        left: 50%;
+        width: 60%;
+        transform: translateX(-50%);
+        border: 2px solid var(--orange);
+    }
+
+    #search {
+        grid-column: 1;
+    }
+    
+    #search-bar svg {
+        stroke: white;
+        grid-column: 2;
+        background-color: var(--orange);
+        padding: 5px;
+    }
+    */
+
+    aside {
+        display: grid;
+    }
+
+    aside h2 {
+        grid-column: 1/3;
+        grid-row: 1;
+    }
+
+    #side-dishes {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .star-rating {
+        display: inline-block;
+    }
+
+    .stars {
+        gap: 0;
+    }
+
+    /*small rules
+
+        #side-dishes h2{
+        padding-bottom: 30px;
+    }
+
+    .side-dish {
+        display: grid;
+        grid-template-columns: 1fr 3fr;
+        gap: 1em;
+    }
+
+    .side-dish img {
+        width: 100%;
+    }
+
+    .side-dish-text {
+        display: flex;
+        flex-direction: column;
+        gap: 0.5em;
+    }
+
+    .star-rating dt{
+        font-weight: bold;
+    }
+
+    .star-rating dd {
+        display: none;
+    }
+
+    .stars {
+        display: flex;
+        gap: 0.5em;
+    }
+
+    .filled-star {
+        fill: var(--orange)
+    }
+
+    */
+
+    footer {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 20px;
+    }
+
+    #copyright {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    #copyright img {
+        max-width: 150px;
+    }
+
+    #social-media {
+        display: grid;
+        grid-column: 2;
+    }
+
+    /*small rules
+
+    footer {
+        background-color: white;
+    }
+    
+    #social-media {
+        color: var(--orange);
+    }
+    
+    #social {
+        padding-top: 30px;
+    }
+    
+    #copyright {
+        display: grid;
+        grid-template-rows: 1fr;    
+        grid-template-columns: auto;
+        text-align: center;
+    }
+    
+    #copyright img {
+        grid-row: 1;
+        max-width: 200px;
+        height: auto;
+        margin: 0 auto;
+        padding-bottom: 1em;
+    }
+        */
+}
+
 /*-------------------- MEDIA QUERY (large) ------------------------------------*/
-
-
