--- a/styles.css
+++ b/styles.css
@@ -41,22 +41,18 @@ html {
     font-family: var(--font-primary);
     background-color: var(--lightgreen);
 }
-
 h1 {
     font-size: 40px;
     text-align: center;
     padding: 100px 20px 20px 20px;
 }
-
 h2 {
     font-size: 30px;
     text-align: center;
 }
-
 h3 {
     font-size: 25px;
 }
-
 nav a,
 nav span,
 menu li,
@@ -67,7 +63,6 @@ footer {
     font-size: 20px;
     list-style: none;
 }
-
 p,
 dd,
 li,
@@ -77,7 +72,6 @@ input {
     font-weight: 400;
     font-size: 16px;
 }
-
 dt {
     font-family: var(--font-secondary);
     font-weight: 700;
@@ -88,12 +82,10 @@ dt {
 .visually-hidden {
     display: none;
 }
-
 body {
     width: 80%;
     margin: 0 auto;
 }
-
 main,
 header {
     background-color: var(--lightgrey);
@@ -102,7 +94,6 @@ header {
 header {
     margin-top: 80px;
 }
-
 header p {
     padding: 10px;
 }
@@ -137,40 +128,32 @@ aside {
     padding: 10px;
     max-width: 100%;
 }
-
 #side-dishes h2 {
     padding-bottom: 30px;
 }
-
 .side-dish {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap: 1em;
 }
-
 .side-dish img {
     width: 100%;
 }
-
 .side-dish-text {
     display: flex;
     flex-direction: column;
     gap: 0.5em;
 }
-
 .star-rating dt {
     font-weight: bold;
 }
-
 .star-rating dd {
     display: none;
 }
-
 .stars {
     display: flex;
     gap: 0.5em;
 }
-
 .filled-star {
     fill: var(--orange)
 }
@@ -180,11 +163,9 @@ aside {
 ol {
     margin-left: 25px;
 }
-
 #ingredients li {
     padding: 0.25em;
 }
-
 #ingredients li {
     list-style: square;
 }
@@ -199,13 +180,11 @@ nav {
     display: flex;
     flex-direction: row;
 }
-
 nav a {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
 nav li {
     list-style: none;
 }
@@ -214,7 +193,6 @@ nav li {
 #main-nav h2 {
     display: none;
 }
-
 #main-nav {
     position: fixed;
     width: 80%;
@@ -227,37 +205,30 @@ nav li {
     z-index: 1;
     box-shadow: 0 4px 4px rgba(0, 0, 0, .25);
 }
-
 #main-nav ul {
     display: grid;
     grid-template-columns: auto 1fr auto;
     justify-content: center;
 }
-
 #main-nav a {
     padding: 10px 20px;
 }
-
 #main-nav .menu-toggle {
     grid-column: 1;
     background-color: white;
     display: flex;
 }
-
 #home {
     grid-column: 2;
     background-color: var(--orange)
 }
-
 #avatar {
     grid-column: 3;
     background-color: white;
 }
-
 #avatar svg {
     stroke: var(--orange);
 }
-
 .extended-main-nav {
     display: none;
 }
@@ -273,11 +244,9 @@ nav li {
     transform: translateX(-50%);
     border: 2px solid var(--orange);
 }
-
 #search {
     grid-column: 1;
 }
-
 #search-bar svg {
     stroke: white;
     grid-column: 2;
@@ -289,22 +258,18 @@ nav li {
 footer {
     background-color: white;
 }
-
 #social-media {
     color: var(--orange);
 }
-
 #social {
     padding-top: 30px;
 }
-
 #copyright {
     display: grid;
     grid-template-rows: 1fr;
     grid-template-columns: auto;
     text-align: center;
 }
-
 #copyright img {
     grid-row: 1;
     max-width: 200px;
@@ -321,14 +286,12 @@ footer {
         text-align: left;
         padding-bottom: 15px;
     }
-
     #main-menu {
         position: relative;
         z-index: 1;
         background-color: rgba(255, 255, 255, .8);
         padding-top:15px;
     }
-
     header img {
         position: relative;
         bottom: 88px;
@@ -336,67 +299,48 @@ footer {
     }
 
     /*Main Rules*/
-
     #main-grid {
         display: grid;
         grid-template-columns: 1fr 2fr;
     }
-
     #details dl {
         text-align: left;
         grid-template-columns: 1fr 1fr;
         justify-content: center;
+        gap: 0;
     }
-
     #details dt {
         text-align: right;
     }
-
-    /*small
-    #details dl {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        gap: 5px;
-        padding: 10px;
-    }
-*/
 
     /*Main Nav Rules*/
     #home {
         grid-column: 1;
         grid-row: 1;
     }
-
     #avatar {
         grid-column: 7;
         grid-row: 1;
     }
-
-    #up-text {
+    .hide-text {
         display: none;
     }
-
     #main-nav .menu-toggle {
         display: none;
     }
-
     #main-nav {
         width: 80%;
     }
-
     #main-nav a {
         padding: 0px;
     }
-
     #main-nav ul {
         grid-template-columns: repeat(7, 1fr);
         background-color: white;
     }
-
     .extended-main-nav img{
         width: 50%;
     }
-
     .extended-main-nav {
         display: grid;
         background-color: white;
@@ -405,7 +349,6 @@ footer {
         padding-top: 15px;
         padding-bottom: 15px;
     }
-
     #search-bar {
         display: grid;
         grid-template-columns: 1fr auto;
@@ -417,167 +360,203 @@ footer {
         grid-row: 1;
         z-index: 2;
     }
-
-/*small rules
-
-    #search-bar {
-        display: grid;
-        grid-template-columns: 1fr;
-        position: absolute;
-        top: 120px;
-        left: 50%;
-        width: 60%;
-        transform: translateX(-50%);
-        border: 2px solid var(--orange);
-    }
-
-    #search {
-        grid-column: 1;
-    }
-
-    #search-bar svg {
-        stroke: white;
-        grid-column: 2;
-        background-color: var(--orange);
-        padding: 5px;
-    }*/
-
-    /*small rules
-    #search-bar {
-        display: grid;
-        grid-template-columns: 1fr;
-        position: absolute;
-        top: 120px;
-        left: 50%;
-        width: 60%;
-        transform: translateX(-50%);
-        border: 2px solid var(--orange);
-    }
-
-    #search {
-        grid-column: 1;
-    }
-    
-    #search-bar svg {
-        stroke: white;
-        grid-column: 2;
-        background-color: var(--orange);
-        padding: 5px;
-    }
-    */
-
+    /*Aside rules*/
     aside {
         display: grid;
     }
-
     aside h2 {
         grid-column: 1/3;
         grid-row: 1;
     }
-
     #side-dishes {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-
     .star-rating {
         display: inline-block;
     }
-
-    .stars {
-        gap: 0;
-    }
-
-    /*small rules
-
-        #side-dishes h2{
-        padding-bottom: 30px;
-    }
-
-    .side-dish {
-        display: grid;
-        grid-template-columns: 1fr 3fr;
-        gap: 1em;
-    }
-
-    .side-dish img {
-        width: 100%;
-    }
-
-    .side-dish-text {
-        display: flex;
-        flex-direction: column;
-        gap: 0.5em;
-    }
-
-    .star-rating dt{
-        font-weight: bold;
-    }
-
-    .star-rating dd {
-        display: none;
-    }
-
-    .stars {
-        display: flex;
-        gap: 0.5em;
-    }
-
-    .filled-star {
-        fill: var(--orange)
-    }
-
-    */
 
     footer {
         display: grid;
         grid-template-columns: 1fr 1fr;
         padding: 20px;
     }
-
     #copyright {
         grid-column: 1;
         grid-row: 1;
     }
-
     #copyright img {
         max-width: 150px;
     }
-
     #social-media {
         display: grid;
         grid-column: 2;
     }
 
-    /*small rules
-
-    footer {
-        background-color: white;
-    }
-    
-    #social-media {
-        color: var(--orange);
-    }
-    
-    #social {
-        padding-top: 30px;
-    }
-    
-    #copyright {
-        display: grid;
-        grid-template-rows: 1fr;    
-        grid-template-columns: auto;
-        text-align: center;
-    }
-    
-    #copyright img {
-        grid-row: 1;
-        max-width: 200px;
-        height: auto;
-        margin: 0 auto;
-        padding-bottom: 1em;
-    }
-        */
 }
 
 /*-------------------- MEDIA QUERY (large) ------------------------------------*/
+
+@media screen and (min-width: 1024px) {
+
+    body {
+        width: 90%;
+    }
+
+    h1 {
+        text-align: center;
+        padding-bottom: 15px;
+    }
+
+    #main-nav {
+        width: 90%;
+        left: 5%;
+        position: fixed;
+        top: 0;
+        align-items: center;
+    }
+    #main-nav ul{
+        grid-template-columns: repeat(11,1fr);
+        grid-template-rows: 1fr;
+    }
+    .main-nav ul > li:nth-child(3){
+        background-color: black;
+    }
+    #home {
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    #breakfast {
+        grid-row: 1;
+        grid-column: 3;
+    }
+    #brunch {
+        grid-row: 1;
+        grid-column: 4;
+    }
+    #lunch {
+        grid-row: 1;
+        grid-column: 5;
+    }
+    #dinner {
+        grid-row: 1;
+        grid-column: 6;
+    }
+    #appetizers {
+        grid-row: 1;
+        grid-column: 7;
+    }
+    #desserts {
+        grid-row: 1;
+        grid-column: 8;
+    }
+    #beverages {
+        grid-row: 1;
+        grid-column: 9;
+    }
+    #avatar {
+        grid-column: 11;
+        align-items: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+    #search-bar {
+        display: grid;
+        grid-template-columns: 1fr;
+        position: absolute;
+        top: 130px;
+        left: 50%;
+        width: 30%;
+        transform: translateX(-50%);
+        border: 2px solid var(--orange);
+        z-index: 0;
+    }
+
+    header {
+        display: grid;
+        grid-template-columns: 1fr, 3fr, 4fr;
+        align-items: center;
+    }
+
+    header img {
+        display: block;
+        position: static;
+        bottom: 0;
+        display: grid;
+        grid-column: 2;
+    }
+
+    section {
+        display: grid;
+    }
+
+    #main-menu {
+        display: flex;
+        flex-direction: column;
+        grid-column: 1;
+        background-color: white;
+        border: 2px solid var(--orange);
+        padding: 20px;
+    }
+
+    #main-menu li {
+        padding: 10px;
+    }
+/*
+    #details dl {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        gap: 5px;
+        padding: 10px;
+    }
+*/
+    #details {
+        display: grid;
+        background-color: var(--darkgrey);
+        color: var(--mossgreen)
+    }
+    #details dl{
+        display: grid;
+        grid-template-columns: repeat(5,1fr);
+        text-align: center;
+    }
+    #details dt, #details dd {
+        text-align: center;
+    }
+
+   
+    #details h2 {
+        grid-column: span 5;
+    }
+
+
+    h1 {
+        grid-column: 1/4;
+    }
+
+    /*Aside rules*/
+    #side-dishes {
+        grid-template-columns: repeat(4, 1fr);
+        gap: 30px;
+    }
+    #side-dishes h2 {
+        grid-column: 1/5;
+        padding-bottom: 0;
+    }
+    .side-dish {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+
+    /*Footer rules*/
+    #copyright {
+        grid-template-columns: repeat(4, 1fr);
+    }
+    small {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    
+}
