--- a/styles.css
+++ b/styles.css
@@ -474,7 +474,7 @@ footer {
 
     header {
         display: grid;
-        grid-template-columns: 1fr, 3fr, 4fr;
+        grid-template-columns: 1fr;
         align-items: center;
     }
 
